--- a/InstagramApp/StoryBoards/Activity.storyboard
+++ b/InstagramApp/StoryBoards/Activity.storyboard
@@ -1,60 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
-    <device id="retina5_5" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xaK-qt-6x9">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--ActivityVC-->
-        <scene sceneID="s0d-6b-0kx">
+        <!--Activity View Controller-->
+        <scene sceneID="wZ3-tr-2Ru">
             <objects>
-                <viewController storyboardIdentifier="Activity" id="Y6W-OH-hqX" customClass="ActivityVC" customModule="InstagramApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                <viewController storyboardIdentifier="Activity" id="xaK-qt-6x9" customClass="ActivityViewController" customModule="InstagramApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dd7-5V-wRE">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gxf-dS-vdd" customClass="CustomSegmentedControl" customModule="InstagramApp" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dPy-pQ-6l4" customClass="CustomSegmentedControl" customModule="InstagramApp" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="20" width="375" height="60"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="RgD-dV-tgb"/>
+                                    <constraint firstAttribute="height" constant="60" id="8Ha-vV-lfW"/>
                                 </constraints>
                             </view>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MHg-91-mw6">
-                                <rect key="frame" x="0.0" y="68" width="414" height="668"/>
-                                <viewLayoutGuide key="contentLayoutGuide" id="yZH-vO-tVl"/>
-                                <viewLayoutGuide key="frameLayoutGuide" id="k04-IR-8o3"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5L2-T6-Rxq">
+                                <rect key="frame" x="0.0" y="80" width="375" height="587"/>
                             </scrollView>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="MHg-91-mw6" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="8gb-kE-ip9"/>
-                            <constraint firstItem="MHg-91-mw6" firstAttribute="top" secondItem="gxf-dS-vdd" secondAttribute="bottom" id="IRU-qH-hBa"/>
-                            <constraint firstItem="MHg-91-mw6" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="RpI-ZT-fF4"/>
-                            <constraint firstItem="gxf-dS-vdd" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="h8K-uO-7Ep"/>
-                            <constraint firstItem="gxf-dS-vdd" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="hfp-FM-XIH"/>
-                            <constraint firstItem="gxf-dS-vdd" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="v0x-ep-JhR"/>
-                            <constraint firstItem="MHg-91-mw6" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="vf1-sK-gfB"/>
+                            <constraint firstItem="dPy-pQ-6l4" firstAttribute="trailing" secondItem="p32-jT-6Pv" secondAttribute="trailing" id="RWE-Mq-UYP"/>
+                            <constraint firstItem="p32-jT-6Pv" firstAttribute="bottom" secondItem="5L2-T6-Rxq" secondAttribute="bottom" id="X0L-0m-U2E"/>
+                            <constraint firstItem="dPy-pQ-6l4" firstAttribute="top" secondItem="p32-jT-6Pv" secondAttribute="top" id="ZZo-Ng-TMy"/>
+                            <constraint firstItem="dPy-pQ-6l4" firstAttribute="leading" secondItem="p32-jT-6Pv" secondAttribute="leading" id="efc-Ph-Eol"/>
+                            <constraint firstItem="5L2-T6-Rxq" firstAttribute="leading" secondItem="p32-jT-6Pv" secondAttribute="leading" id="iSQ-Yp-Kv2"/>
+                            <constraint firstItem="p32-jT-6Pv" firstAttribute="trailing" secondItem="5L2-T6-Rxq" secondAttribute="trailing" id="kNF-7f-mao"/>
+                            <constraint firstItem="5L2-T6-Rxq" firstAttribute="top" secondItem="dPy-pQ-6l4" secondAttribute="bottom" id="sdC-Zx-KPR"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="p32-jT-6Pv"/>
                     </view>
                     <connections>
-                        <outlet property="scrollView" destination="MHg-91-mw6" id="U9w-Yl-bdO"/>
-                        <outlet property="segmentedControl" destination="gxf-dS-vdd" id="5EV-Rk-Rx2"/>
+                        <outlet property="scrollView" destination="5L2-T6-Rxq" id="KWY-Fl-xC7"/>
+                        <outlet property="segmentedControl" destination="dPy-pQ-6l4" id="vlA-eD-vt4"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LPk-RH-fRM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="46.376811594202906" y="-2.4456521739130435"/>
+            <point key="canvasLocation" x="-60" y="68.815592203898049"/>
         </scene>
     </scenes>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
