--- a/InstagramApp/StoryBoards/Activity.storyboard
+++ b/InstagramApp/StoryBoards/Activity.storyboard
@@ -1,34 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xaK-qt-6x9">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xaK-qt-6x9">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Activity View Controller-->
+        <!--ActivityVC-->
         <scene sceneID="wZ3-tr-2Ru">
             <objects>
-                <viewController storyboardIdentifier="Activity" id="xaK-qt-6x9" customClass="ActivityViewController" customModule="InstagramApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ActivityVC" id="xaK-qt-6x9" customClass="ActivityVC" customModule="InstagramApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="dd7-5V-wRE">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dPy-pQ-6l4" customClass="CustomSegmentedControl" customModule="InstagramApp" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="20" width="375" height="60"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="8Ha-vV-lfW"/>
                                 </constraints>
                             </view>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5L2-T6-Rxq">
-                                <rect key="frame" x="0.0" y="80" width="375" height="587"/>
+                                <rect key="frame" x="0.0" y="60" width="375" height="607"/>
                             </scrollView>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="p32-jT-6Pv"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="dPy-pQ-6l4" firstAttribute="trailing" secondItem="p32-jT-6Pv" secondAttribute="trailing" id="RWE-Mq-UYP"/>
@@ -39,7 +38,6 @@
                             <constraint firstItem="p32-jT-6Pv" firstAttribute="trailing" secondItem="5L2-T6-Rxq" secondAttribute="trailing" id="kNF-7f-mao"/>
                             <constraint firstItem="5L2-T6-Rxq" firstAttribute="top" secondItem="dPy-pQ-6l4" secondAttribute="bottom" id="sdC-Zx-KPR"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="p32-jT-6Pv"/>
                     </view>
                     <connections>
                         <outlet property="scrollView" destination="5L2-T6-Rxq" id="KWY-Fl-xC7"/>
